# paper-to-deck

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
deploy/: Dockerfile  cloudrun.md
src/paper_to_deck/: mcp_server.py  pdf_parser.py  renderer.py  schemas.py  security.py  theme.css
src/paper_to_deck/agents/: __init__.py  pipeline.py  tools.py
src/paper_to_deck/web/: __init__.py  app.py  runner.py
src/paper_to_deck/web/static/: index.html
tests/: conftest.py  test_agents_pipeline.py  test_deploy_artifacts.py  test_mcp_server.py  test_pdf_parser.py  test_renderer.py  test_schemas.py  test_security.py  test_web.py
