[project]
name = "paper-to-deck"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pydantic>=2.6",
    "mcp>=1.2",
    "google-adk>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_to_deck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
